<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAbout"
    android:orientation="vertical">
    <include
        android:id="@+id/miActionBarAb"
        layout="@layout/action_bar">
    </include>
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutTitulo"
        android:textColor="@color/purple_700"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="45dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutDesc"
        android:textColor="@color/teal_700"
        android:textSize="32dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutFin"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="32dp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"/>
</LinearLayout>